# agoradesk-trade-bot

./: .gitignore  Cargo.toml  README.md  todos.md
src/: btc.rs  coins.rs  main.rs
